Bug 1492315 - Subtract table grid item margins correctly. r=mats

Differential Revision: https://phabricator.services.mozilla.com/D63762